apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

android {
    compileSdk 34

    defaultConfig {
        applicationId "com.leadn.contractolabor"
        minSdkVersion 23
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        multiDexEnabled true

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    ndkVersion '25.2.9519653'
    namespace 'com.leadn.contractolabor'
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'


    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
    /*mutlidex*/
    implementation 'com.android.support:multidex:1.0.3'

    /*firebase ui*/
    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'

    /*firebase Storage*/
    //implementation 'com.google.firebase:firebase-storage:21.0.0'
    /*firebase database*/
    //implementation 'com.google.firebase:firebase-database:21.0.0'
    /*firebase auth*/
    //implementation 'com.google.firebase:firebase-auth:23.0.0'

    /*firebase ui adapter*/
    implementation 'com.firebaseui:firebase-ui-database:8.0.2'

    /*Material widgets*/
    implementation 'com.google.android.material:material:1.12.0'

    /*gif loader*/
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.29'

    /*easy Permissions*/
    implementation 'pub.devrel:easypermissions:3.0.0'

    /*ImagePicker bottom*/
    //implementation 'gun0912.ted:tedbottompicker:2.0.1'
    implementation 'io.github.ParkSangGwon:tedimagepicker:1.5.0'


    /*Glide*/
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'

    /*Material Spinner*/
    implementation 'com.jaredrummler:material-spinner:1.3.1'


    /*Retrofit*/
    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'

    /*circular image view*/
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    // circular progress bar
    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'

    implementation(platform("com.google.firebase:firebase-bom:33.1.2"))

    /*firebase auth && UI*/
    implementation("com.google.firebase:firebase-auth")

    /*firebase firestore*/
    implementation("com.google.firebase:firebase-firestore")

    /*firebase Storage*/
    implementation("com.google.firebase:firebase-storage")
}


